# weather

./: .gitignore  .uncrustify  CLAUDE.md  LICENSE.md  Makefile  README.md  pak.json  weather.c
AI/context/: CONTEXT.md
AI/designs/: DESIGN.md
AI/logs/: CHANGELOG.md
AI/plans/: PLAN.md
AI/procedures/: PROCEDURE.md
AI/references/: REFERENCES.md
Nature/Nature.xcodeproj/: project.pbxproj
config/: device.json5  display.json5  ioto.json5
doc/: display.json5  weather-app.avif
ioto/: .env  CLAUDE.md  EVAL.md  LICENSE.md  Makefile  README-CLOUD.md  README-ESP32.md  README-FREERTOS.md  README.md  dist.me  main.me  make.bat  mbedtls.me  openssl.me  pak.json  start.me
ioto/apps/: apps.me
ioto/certs/: ca.db  ec.crt  ec.csr  openssl.conf  saturn.ans  self.crt  test.csr  test.key
ioto/cmds/: db.c  json.c  main.c  password.c  start.c  web.c
ioto/include/: config.h  crypt.h  db.h  ioto-config.h  ioto.h  json.h  me.h  mqtt.h  openai.h  osdep.h  r.h  uctx-defs.h  uctx-os.h  uctx.h  url.h  web.h  websock.h  websockets.h
ioto/installs/: Makefile  installs.me  manifest.me  uninstall.sh
ioto/lib/: cryptLib.c  dbLib.c  iotoLib.c  jsonLib.c  mqttLib.c  openaiLib.c  rLib.c  uctxAssembly.S  uctxLib.c  urlLib.c  webLib.c  websockLib.c  websocketsLib.c
ioto/projects/: ioto-freebsd-default-me.h  ioto-freebsd-default.mk  ioto-freertos-default-me.h  ioto-freertos-default.mk  ioto-linux-default-me.h  ioto-linux-default.mk  ioto-macosx-default.mk  (+6 more)
ioto/projects/esp32/: CMakeLists.txt  Makefile
theme/: t-cloudy.avif  t-raining.avif  t-snowy.avif  t-stormy.avif  t-sunny.avif
(+474 files in other folders)
